--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="en"> 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-01.</title>
-</head>
- 
-<body>
+  </head>
+
+  <body>
     <header>
-<a href="#"><span>WEB</span>STUDIO</a>
-
-
-
+      <a href="#"><span>WEB</span>STUDIO</a>
+    <nav>
+        <ul>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+        </ul>
+    </nav>
     </header>
     <main></main>
     <footer></footer>
-</body>
+  </body>
 </html>
