--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
             <li><a href="#">Contacts</a></li>
         </ul>
     </nav>
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+
     </header>
-    <main></main>
+    <main>
+
+    </main>
     <footer></footer>
   </body>
 </html>
