--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
     </nav>
     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-
     </header>
     <main>
+<!-- Hero -->
+<section>
+<div>
+    <h1>Effective Solutions for Your Business</h1>
 <button type="button">Order Service</button>
+</div>
+</section>
     </main>
     <footer></footer>
   </body>
