--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
 </div>
 </section>
 
+<!--What are we doing-->
+<section>
+<div>
+    <h2>What are we doing</h2>
+<ul>
+    <li><img src="" alt=""></li>
+    <li><img src="" alt=""></li>
+    <li><img src="" alt=""></li>
+</ul>
+
+
+</div>
+</section>
+
     </main>
     <footer></footer>
   </body>
