--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div>
     <h2>What are we doing</h2>
 <ul>
-    <li><img src="" alt=""></li>
+    <li><img src="/images/--What" alt=""></li>
     <li><img src="" alt=""></li>
     <li><img src="" alt=""></li>
 </ul>
