--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 <div>
     <h2>What are we doing</h2>
 <ul>
-    <li><img src="/images/--What" alt=""></li>
-    <li><img src="" alt=""></li>
-    <li><img src="" alt=""></li>
+    <li><img src="images/what_are_we_doing/desktop.jpg" alt="monitor"></li>
+    <li><img src="/images/what_are_we_doing/mobile.jpg" alt="mobile"></li>
+    <li><img src="/images/what_are_we_doing/multi.jpg" alt="synergy"></li>
 </ul>
 
 
