--- a/index.html
+++ b/index.html
@@ -60,11 +60,17 @@
     <li><img src="/images/what_are_we_doing/mobile.jpg" alt="mobile"></li>
     <li><img src="/images/what_are_we_doing/multi.jpg" alt="synergy"></li>
 </ul>
+</div>
+</section>
+
+<!--Our Team-->
+<section>
+<div>
+
 
 
 </div>
 </section>
-
     </main>
     <footer></footer>
   </body>
