--- a/index.html
+++ b/index.html
@@ -66,9 +66,29 @@
 <!--Our Team-->
 <section>
 <div>
-
-
-
+    <h2>Our Team</h2>
+<ul>
+    <li>
+        <img src="/images/our_team/Mark Guerrero.jpg" alt="Mark_Guerrero" width="264px" height="380px">
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+    </li>
+    <li>
+        <img src="/images/our_team/Tom Ford.jpg" alt="Tom_Ford">
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+    </li>
+    <li>
+        <img src="/images/our_team/Camila Garcia.jpg" alt="Camila_Garcia">
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+    </li>
+    <li>
+        <img src="/images/our_team/Daniel Wilson.jpg" alt="Daniel_Wilson">
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
+    </li>
+</ul>
 </div>
 </section>
     </main>
