--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 </div>
 </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section>
+           <a href="#"><span>WEB</span>STUDIO</a>
+</section>
+    </footer>
   </body>
 </html>
