--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <footer>
         <section>
            <a href="#"><span>WEB</span>STUDIO</a>
+           <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </section>
     </footer>
   </body>
