--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header>
-      <a href="#"><span>WEB</span>STUDIO</a>
+      <a href="./index.html"><span>WEB</span>STUDIO</a>
     <nav>
         <ul>
             <li><a href="#">Studio</a></li>
@@ -16,8 +16,12 @@
             <li><a href="#">Contacts</a></li>
         </ul>
     </nav>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+    <adress>
+    <ul>
+    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    </li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+    </ul>
+    </adress>
     </header>
     <main>
 <!-- Hero -->
@@ -57,8 +61,8 @@
     <h2>What are we doing</h2>
 <ul>
     <li><img src="images/what_are_we_doing/desktop.jpg" alt="monitor"></li>
-    <li><img src="/images/what_are_we_doing/mobile.jpg" alt="mobile"></li>
-    <li><img src="/images/what_are_we_doing/multi.jpg" alt="synergy"></li>
+    <li><img src="images/what_are_we_doing/mobile.jpg" alt="mobile"></li>
+    <li><img src="images/what_are_we_doing/multi.jpg" alt="synergy"></li>
 </ul>
 </div>
 </section>
@@ -94,7 +98,7 @@
     </main>
     <footer>
         <section>
-           <a href="#"><span>WEB</span>STUDIO</a>
+           <a href="./index.html"><span>WEB</span>STUDIO</a>
            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </section>
     </footer>
