--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </ul>
     </nav>
     <adress>
-    <ul>
-    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    </li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-    </ul>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
     </adress>
     </header>
     <main>
