--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <li><a href="#">Contacts</a></li>
         </ul>
     </nav>
-    <adress>
+    <address>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
-    </adress>
+    </address>
     </header>
     <main>
 <!-- Hero -->
