--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header>
-      <a href="./index.html"><span>WEB</span>STUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
     <nav>
         <ul>
             <li><a href="#">Studio</a></li>
