dodanie nagłówka h2 + usuniecie div z sekcji

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </section>
 <!--Discription-->
 <section>
-<div>
+<h2>--Discription--</h2>
     <ul>
         <li>
             <h3>Strategy</h3>
@@ -50,7 +50,7 @@
             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving. </p>
         </li>
     </ul>
-</div>
+
 </section>
 
 <!--What are we doing-->
