--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 <section>
     <h2>What are we doing</h2>
 <ul>
-    <li><img src="images/what_are_we_doing/desktop.jpg" alt="monitor"></li>
-    <li><img src="images/what_are_we_doing/mobile.jpg" alt="mobile"></li>
-    <li><img src="images/what_are_we_doing/multi.jpg" alt="synergy"></li>
+    <li><img src="./images/what_are_we_doing/desktop.jpg" alt="monitor" width="360"></li>
+    <li><img src="./images/what_are_we_doing/mobile.jpg" alt="mobile" width="360"></li>
+    <li><img src="./images/what_are_we_doing/multi.jpg" alt="synergy" width="360"></li>
 </ul>
 </section>
 
