--- a/index.html
+++ b/index.html
@@ -65,31 +65,29 @@
 
 <!--Our Team-->
 <section>
-<div>
-    <h2>Our Team</h2>
-<ul>
+<h2>Our Team</h2>
+    <ul>
     <li>
-        <img src="/images/our_team/Mark_Guerrero.jpg" alt="Mark_Guerrero" width="264" height="260">
+        <img src="./images/our_team/Mark_Guerrero.jpg" alt="Mark_Guerrero" width="264" height="260">
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
     </li>
     <li>
-        <img src="/images/our_team/Tom_Ford.jpg" alt="Tom_Ford" width="264" height="260">
+        <img src="./images/our_team/Tom_Ford.jpg" alt="Tom_Ford" width="264" height="260">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
     </li>
     <li>
-        <img src="/images/our_team/Camila_Garcia.jpg" alt="Camila_Garcia" width="264" height="260">
+        <img src="./images/our_team/Camila_Garcia.jpg" alt="Camila_Garcia" width="264" height="260">
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
     </li>
     <li>
-        <img src="/images/our_team/Daniel_Wilson.jpg" alt="Daniel_Wilson" width="264" height="260">
+        <img src="./images/our_team/Daniel_Wilson.jpg" alt="Daniel_Wilson" width="264" height="260">
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
     </li>
-</ul>
-</div>
+    </ul>
 </section>
 </main>
 
