--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <footer>
     <section>
-        <a href="./index.html"><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </section>
 </footer>
