--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 </section>
 
-<!--What are we doing-->
+<!--What are we doing
 <section>
     <h2>What are we doing</h2>
 <ul>
@@ -62,7 +62,7 @@
     <li><img src="./images/what_are_we_doing/multi.jpg" alt="synergy" width="360"></li>
 </ul>
 </section>
-
+-->
 <!--Our Team-->
 <section>
 <h2>Our Team</h2>
